Atualização do thema e adição demais redes sociais

--- a/_config.yml
+++ b/_config.yml
@@ -97,3 +97,6 @@ facebook_like: true
 # Social Networks
 facebook_user: CasalPartiu
 googleplus_user: 104662451283465127832
+instagram_user: patfigfoto
+twitter_user: casalpartiu
+pinterest_user: CasalPartiu
